Update and rename e-profiling-kemkes.html to aspak-kemkes.html

--- a/aspak-kemkes.html
+++ b/aspak-kemkes.html
@@ -15,18 +15,18 @@
     <title>Kentangbet - Situs Akun Demo Slot Mahjong Ways Terbaru Gratis Anti Lag 2024</title>
     <meta name="description"
         content="KentangBet hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini!" />
-    <link rel="canonical" href="https://e-profiling.kemkes.go.id/" />
+    <link rel="canonical" href="https://aspak.kemkes.go.id/" />
     <link rel="amphtml" href="https://gojosatoru.info/amp/kapal-laut/"/>
     <meta name="data-spm" content="a2o4j" />
   <meta name="robots" content="index, follow" />
-  <meta name="og:url" content="https://e-profiling.kemkes.go.id/" />
+  <meta name="og:url" content="https://aspak.kemkes.go.id/" />
   <meta name="og:title" content="Kentangbet - Situs Akun Demo Slot Mahjong Ways Terbaru Gratis Anti Lag 2024" />
   <meta name="og:type" content="product" />
   <meta name="og:description" content="KentangBet hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini!" />
   <meta name="og:image" content="https://i.imgur.com/qNXDmME.jpeg" />
   <link rel="manifest" href="https://g.lazcdn.com/g/lzdfe/pwa-assets/5.0.7/manifest/id.json">
   <link rel="icon" type="image/png" href="https://github.githubassets.com/favicons/favicon.svg">
-  <link rel="canonical" href="https://e-profiling.kemkes.go.id/" />
+  <link rel="canonical" href="https://aspak.kemkes.go.id/" />
   <link rel="amphtml" href="https://gojosatoru.info/amp/kapal-laut/" />
   <!-- start preload -->
   <link rel="preload" href="https://i.imgur.com/qNXDmME.jpeg" as="image" />
@@ -414,7 +414,7 @@
 "@type": "Organization",
 "name": "Kentangbet",
 "alternateName": "Kentangbet",
-"url": "https://e-profiling.kemkes.go.id/",
+"url": "https://aspak.kemkes.go.id/",
 "logo": "https://i.imgur.com/2bF8kcw.png",
 "description": "KentangBet hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini!",
 "address": {
@@ -436,7 +436,7 @@
 "sameAs": [
   "https://www.youtube.com/@Kentangbet",
   "https://twitter.com/Kentangbet",
-  "https://e-profiling.kemkes.go.id/"
+  "https://aspak.kemkes.go.id/"
 ]
 },
 "publisher": {
@@ -506,13 +506,13 @@
     "@type": "ListItem", 
     "position": 1,
     "name": "Home",
-    "item": "https://e-profiling.kemkes.go.id/"
+    "item": "https://aspak.kemkes.go.id/"
   },
   {
     "@type": "ListItem", 
     "position": 2, 
     "name": "Kentangbet",
-    "item": "https://e-profiling.kemkes.go.id/"
+    "item": "https://aspak.kemkes.go.id/"
   },
   {
     "@type": "ListItem", 
@@ -532,7 +532,7 @@
   "description": "KentangBet hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini!",
   "keywords": ["Kentangbet, Kentangbet, Kentangbet login, Kentangbet login, agen judi bola, agen bola, agen judi, judi bola"],
   "image": "/https://i.imgur.com/qNXDmME.jpeg",
-  "url": "https://e-profiling.kemkes.go.id/",
+  "url": "https://aspak.kemkes.go.id/",
   "publisher": { "@type": "Organization", "name": "Kentangbet" },
   "aggregateRating": { "@type": "AggregateRating", "ratingValue": "89", "bestRating": "100", "worstRating": "0", "ratingCount": "45698711" },
   "inLanguage": "id-ID",
@@ -1048,28 +1048,28 @@
                     <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
 
                     <div id='nav-subnav' data-category="amazon-home">
-                        <a href="https://e-profiling.kemkes.go.id/"
+                        <a href="https://aspak.kemkes.go.id/"
                             class="nav-a nav-b" aria-label="Amazon devices">
                             <span class="nav-a-content">
                                 Kentangbet Login
 
                             </span>
                         </a>
-                        <a href="https://e-profiling.kemkes.go.id/"
+                        <a href="https://aspak.kemkes.go.id/"
                             class="nav-a" aria-label="Echo & Alexa">
                             <span class="nav-a-content">
                                 Kentangbet
 
                             </span>
                         </a>
-                        <a href="https://e-profiling.kemkes.go.id/"
+                        <a href="https://aspak.kemkes.go.id/"
                             class="nav-a" aria-label="Kindle E-Reader">
                             <span class="nav-a-content">
                                 Link Alternatif Kentangbet
 
                             </span>
                         </a>
-                        <a href="https://e-profiling.kemkes.go.id/" class="nav-a" aria-label="Fire TV">
+                        <a href="https://aspak.kemkes.go.id/" class="nav-a" aria-label="Fire TV">
                             <span class="nav-a-content">
                                 Situs Kentangbet
 
@@ -2479,7 +2479,7 @@
                                 <div id="mars-fs-subnav-helper">
                                     <div id="mars-fs-border-top"></div>
                                     <span class="subnav-home">
-                                        <a class="a-link-normal fs-links" href="https://e-profiling.kemkes.go.id/">
+                                        <a class="a-link-normal fs-links" href="https://aspak.kemkes.go.id/">
                                             <span id="mars-fs-name" class="a-size-base-plus a-color-base a-text-bold">
                                                 Kentangbet Login
                                             </span>
@@ -2490,7 +2490,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://e-profiling.kemkes.go.id/">
+                                                href="https://aspak.kemkes.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Kentangbet
                                                 </span>
@@ -2503,7 +2503,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://e-profiling.kemkes.go.id/">
+                                                href="https://aspak.kemkes.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Link Alternatif Kentangbet
                                                 </span>
@@ -2516,7 +2516,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://e-profiling.kemkes.go.id/">
+                                                href="https://aspak.kemkes.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Situs Kentangbet
                                                 </span>
@@ -2529,7 +2529,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="https://e-profiling.kemkes.go.id/">
+                                                href="https://aspak.kemkes.go.id/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     BO Kentangbet
                                                 </span>
@@ -2796,7 +2796,7 @@
                                                                                 class="cip-a-size-small">
                                                                                 <div
                                                                                     id="contextualIngressPtLabel_deliveryShortLine">
-                                                                                    <a href="https://e-profiling.kemkes.go.id/">
+                                                                                    <a href="https://aspak.kemkes.go.id/">
                                                                                         <span>Link Login Daftar Kentangbet</span>
                                                                                     </a>
                                                                                 </div>
@@ -4644,7 +4644,7 @@
                                         <div id="variation_configuration" class="a-section a-spacing-small">
                                             <div class="a-row a-spacing-micro singleton"> <label class="a-form-label">
                                                     Configuration:
-                                                </label> <a href="https://e-profiling.kemkes.go.id/"><span class="selection">Kentangbet</span></a>
+                                                </label> <a href="https://aspak.kemkes.go.id/"><span class="selection">Kentangbet</span></a>
                                             </div>
                                         </div>
                                     </form>
@@ -4891,7 +4891,7 @@
                             data-csa-c-is-in-initial-active-row="false">
                             <h1 style="text-align: center;"><strong>Kentangbet - Situs Akun Demo Slot Mahjong Ways Terbaru Gratis Anti Lag 2024</strong></h1>
 
-<P><span style="font-weight: 200;"><a href="https://e-profiling.kemkes.go.id/" rel="dofollow" target="_blank">Kentangbet</a> hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini! sensasi maxwin berbeda di situs slot online 2024 ini.</span></P>
+<P><span style="font-weight: 200;"><a href="https://aspak.kemkes.go.id/" rel="dofollow" target="_blank">Kentangbet</a> hadir dengan fitur akun demo yang memungkinkan Anda menikmati keseruan bermain slot Mahjong tanpa perlu mengeluarkan modal! Nikmati pengalaman bermain yang realistis dengan tampilan grafis memukau dan fitur bonus menarik. Akun demo ini dirancang khusus untuk membantu Anda memahami mekanisme permainan, strategi, dan fitur-fiturnya sebelum bertaruh dengan uang asli. Cocok untuk pemula maupun pemain berpengalaman yang ingin mencoba sesuatu yang baru. Jelajahi dunia Mahjong Slot bersama KentangBet dan raih kesempatan untuk menjadi ahli dalam permainan ini! sensasi maxwin berbeda di situs slot online 2024 ini.</span></P>
 
 
 <p>&nbsp;</p>
@@ -12576,7 +12576,7 @@
                                                                                                 <span
                                                                                                     class="a-button a-button-base"><span
                                                                                                         class="a-button-inner"><a
-                                                                                                            href="https://e-profiling.kemkes.go.id/"
+                                                                                                            href="https://aspak.kemkes.go.id/"
                                                                                                             data-hook="vote-helpful-button"
                                                                                                             class="a-button-text">
                                                                                                             <div
