--- a/siporsat.kemkes.html
+++ b/siporsat.kemkes.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="google-site-verification" content="7NpRFmfHvw23F8f_Gil2LV-8q35D1Eo8-9aE2g3W_mM" />
     <meta name="google-site-verification" content="0YyU-fXynKSLRqjyRlOFeI0ebHkfMyUact6nhKXkAHM" />
+	<meta name="google-site-verification" content="0YyU-fXynKSLRqjyRlOFeI0ebHkfMyUact6nhKXkAHM" />
     <meta name="title" content="Kentangbet ? Agen Situs Slot Demo Kakek Zeus Garansi Maxwin Terbaru Malam Ini" />
     <title>Kentangbet ? Agen Situs Slot Demo Kakek Zeus Garansi Maxwin Terbaru Malam Ini</title>
     <meta name="description"
