--- a/bphtbv2-bandungkab.html
+++ b/bphtbv2-bandungkab.html
@@ -10,15 +10,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <meta name="data-spm" content="a2o4j" />
 <meta name="robots" content="index, follow" /> 
-<meta name="og:url" content="https://bphtbv2.bandungkab.go.id/	" />
+<meta name="og:url" content="https://ejournal.uinsatu.ac.id/	" />
 <meta name="og:title" content="Pisangbet | Situs APK Mesin Slot777 Gacor Resmi Bet 200 Terpercaya Pasti Jepe x5000" />
 <meta name="og:type" content="product" />
 <meta name="search engines" content="Aeiwi, Alexa, AllTheWeb, AltaVista, AOL Netfind, Anzwers, Canada, DirectHit, EuroSeek, Excite, Overture, Go, Google, HotBot, InfoMak, Kanoodle, Lycos, MasterSite, National Directory, Northern Light, SearchIt, SimpleSearch, WebsMostLinked, WebTop, What-U-Seek, AOL, Yahoo, WebCrawler, Infoseek, Excite, Magellan, LookSmart, bing, CNET, Googlebot">
 <meta name="og:description" content="Pisangbet adalah situs penyedia link APK slot777 terbaik dan terpercaya di indonesia saat ini dan pastinya gacor, dengan memberikan berbagai macam jenis promo new member dan jaminan maxwin x5000 dengan persentase 100%." />
 <meta name="og:image" content="https://i.imgur.com/vbVLwak.jpeg" />
 <link rel="shortcut icon" href="https://i.imgur.com/WRQvUWy.png" />
-<link rel="canonical" href="https://bphtbv2.bandungkab.go.id/	" />
-<link rel="amphtml" href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"/>
+<link rel="canonical" href="https://ejournal.uinsatu.ac.id/	" />
+<link rel="amphtml" href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"/>
 <!-- sp:end-feature:head-start -->
 <!-- sp:feature:csm:head-open-part1 -->
 <script type='text/javascript'>var ue_t0 = ue_t0 || +new Date();</script>
@@ -748,7 +748,7 @@ type='text/javascript'>window.navmet.push({ key: 'Search', end: +new Date(), beg
 
 
 
-<a href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"
+<a href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"
 class="nav-a nav-a-2   nav-progressive-attribute" data-nav-ref="nav_ya_signin"
 data-nav-role="signin" data-ux-jq-mouseenter="true" id="nav-link-accountList"
 tabindex="0" data-csa-c-type="link" data-csa-c-slot-id="nav-link-accountList"
@@ -760,7 +760,7 @@ class="nav-line-1 nav-progressive-content">Hello, sign in</span></div>
 </a>
 
 
-<a href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"
+<a href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"
 class="nav-a nav-a-2   nav-progressive-attribute" id="nav-orders" tabindex="0">
 <span class="nav-line-1">Returns</span>
 <span class="nav-line-2">& orders<span class="nav-icon nav-arrow"></span></span>
@@ -768,7 +768,7 @@ class="nav-a nav-a-2   nav-progressive-attribute" id="nav-orders" tabindex="0">
 
 
 
-<a href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html" aria-label="0 items in shopping basket"
+<a href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html" aria-label="0 items in shopping basket"
 class="nav-a nav-a-2 nav-progressive-attribute" id="nav-cart">
 <div id="nav-cart-count-container">
 <span id="nav-cart-count" aria-hidden="true"
@@ -801,12 +801,12 @@ type='text/javascript'>window.navmet.push({ key: 'Tools', end: +new Date(), begi
 <div id='nav-xshop-container'>
 <div id='nav-xshop' class="nav-progressive-content">
 <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
-<a href="https://bphtbv2.bandungkab.go.id/	" class="nav-a  " tabindex="0"
+<a href="https://ejournal.uinsatu.ac.id/	" class="nav-a  " tabindex="0"
 data-csa-c-type="link" data-csa-c-slot-id="nav_cs_0"
 data-csa-c-content-id="nav_cs_bestsellers">Pisangbet</a>
-<a href="https://bphtbv2.bandungkab.go.id/	" class="nav-a  " tabindex="0" data-csa-c-type="link"
+<a href="https://ejournal.uinsatu.ac.id/	" class="nav-a  " tabindex="0" data-csa-c-type="link"
 data-csa-c-slot-id="nav_cs_2" data-csa-c-content-id="nav_cs_gb">Situs Slot</a>
-<a href="https://bphtbv2.bandungkab.go.id/	" class="nav-a  " tabindex="0" data-csa-c-type="link"
+<a href="https://ejournal.uinsatu.ac.id/	" class="nav-a  " tabindex="0" data-csa-c-type="link"
 data-csa-c-slot-id="nav_cs_2" data-csa-c-content-id="nav_cs_gb">Slot Online</a>
 
 
@@ -821,7 +821,7 @@ type='text/javascript'>window.navmet.push({ key: 'CrossShop', end: +new Date(), 
 <div id="navSwmHoliday"
 style="height: 39px; width: 400px; overflow: hidden; position: relative; ">
 <a aria-label="Christmas gift store"
-href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"
+href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"
 class="nav-imageHref" target="_blank">
 <img alt="Christmas gift store"
 src="https://m.media-amazon.com/images/G/35/Gateway/SWM/BAUSWMs/TodaysDeals_swm_400x39._CB564878150_.jpg">
@@ -841,21 +841,21 @@ type='text/javascript'>window.navmet.push({ key: 'SWM', end: +new Date(), begin:
 <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
 
 <div id='nav-subnav' data-category="amazon-home">
-<a href="https://bphtbv2.bandungkab.go.id/	"
+<a href="https://ejournal.uinsatu.ac.id/	"
 class="nav-a nav-b" aria-label="Amazon devices">
 <span class="nav-a-content">
 Pisangbet
 
 </span>
 </a>
-<a href="https://bphtbv2.bandungkab.go.id/	"
+<a href="https://ejournal.uinsatu.ac.id/	"
 class="nav-a" aria-label="Echo & Alexa">
 <span class="nav-a-content">
 Video Pisangbet Terbaru
 
 </span>
 </a>
-<a href="https://bphtbv2.bandungkab.go.id/	"
+<a href="https://ejournal.uinsatu.ac.id/	"
 class="nav-a" aria-label="Kindle E-Reader">
 <span class="nav-a-content">
 Macau Pools
@@ -2264,7 +2264,7 @@ display: none ! important;
 <div id="mars-fs-subnav-helper">
 <div id="mars-fs-border-top"></div>
 <span class="subnav-home">
-<a class="a-link-normal fs-links" href="https://bphtbv2.bandungkab.go.id/	">
+<a class="a-link-normal fs-links" href="https://ejournal.uinsatu.ac.id/	">
 <span id="mars-fs-name" class="a-size-base-plus a-color-base a-text-bold">
 Pisangbet Maxwin
 </span>
@@ -2275,7 +2275,7 @@ Pisangbet Maxwin
 data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
 <span class="subnav-link-wrapper">
 <a id="Deals" class="a-link-normal links fs-links subnav-links"
-href="https://bphtbv2.bandungkab.go.id/	">
+href="https://ejournal.uinsatu.ac.id/	">
 <span class="a-size-base-plus a-color-base">
 Slot Bet 200
 </span>
@@ -2288,7 +2288,7 @@ Slot Bet 200
 data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
 <span class="subnav-link-wrapper">
 <a id="Deals" class="a-link-normal links fs-links subnav-links"
-href="https://bphtbv2.bandungkab.go.id/	">
+href="https://ejournal.uinsatu.ac.id/	">
 <span class="a-size-base-plus a-color-base">
 Link Slot777 Gacor
 </span>
@@ -2301,7 +2301,7 @@ Link Slot777 Gacor
 data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
 <span class="subnav-link-wrapper">
 <a id="Deals" class="a-link-normal links fs-links subnav-links"
-href="https://bphtbv2.bandungkab.go.id/	">
+href="https://ejournal.uinsatu.ac.id/	">
 <span class="a-size-base-plus a-color-base">
 Situs Slot777 Gacor
 </span>
@@ -2314,7 +2314,7 @@ Situs Slot777 Gacor
 </div>
 </div>
 </nav>
-<div class="PTACID1131"><a href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html" rel="nofollow noreferrer" class="register">DAFTAR</a><a href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html" rel="nofollow noreferrer" class="login">LOGIN</a></div><style>.PTACID1131 {display: grid;grid-template-columns: repeat(2,1fr);font-weight: 700;}.PTACID1131 a {text-align: center;}.login, .register {color: #ffffff;padding: 13px 10px;}.login, .login-button { border: 1px solid #0000ff;background: linear-gradient(to bottom,#fff6f6 0,#e7aea7 100%);border: 2px solid #1b0404;}.register, .register-button {background: linear-gradient(to bottom,#fff6f6 0,#e7aea7 100%);border: 2px solid #1b0404;}</style><br>
+<div class="PTACID1131"><a href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html" rel="nofollow noreferrer" class="register">DAFTAR</a><a href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html" rel="nofollow noreferrer" class="login">LOGIN</a></div><style>.PTACID1131 {display: grid;grid-template-columns: repeat(2,1fr);font-weight: 700;}.PTACID1131 a {text-align: center;}.login, .register {color: #ffffff;padding: 13px 10px;}.login, .login-button { border: 1px solid #0000ff;background: linear-gradient(to bottom,#fff6f6 0,#e7aea7 100%);border: 2px solid #1b0404;}.register, .register-button {background: linear-gradient(to bottom,#fff6f6 0,#e7aea7 100%);border: 2px solid #1b0404;}</style><br>
 <script type="text/javascript">(function (f) { var _np = (window.P._namespace("MarsFamilyStripe")); if (_np.guardFatal) { _np.guardFatal(f)(_np); } else { f(_np); } }(function (P) {
 P.when("MarsFamilyStripe.Mover").execute(function (Mover) {
 Mover.moveFamilyStripeToBeforeDpContainer();
@@ -2582,7 +2582,7 @@ data-close-all-offers-display="{}">
                                                                     <span
                                                                         class="a-button-inner">
                                                                         <a
-                                                                        href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"
+                                                                        href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"
                                                                         title="Situs Slot777 Gacor"
                                                                         class="a-button-text" style="background: linear-gradient(to right,#e7aea7 0%,#f3f3f3 100%); color: #ffffff;"> DAFTAR </a>
                                                                     </span>
@@ -2664,7 +2664,7 @@ data-close-all-offers-display="{}">
                                                                     id="wishListMainButton"
                                                                     class="a-button a-button-groupfirst a-spacing-none a-button-base"><span
                                                                         class="a-button-inner"><a
-                                                                            href="https://ikantongkolsambal.art/AMP/bphtbv2-bandungkab.html"
+                                                                            href="https://ikantongkolsambal.art/AMP/ejournal-uinsatu.html"
                                                                             name="submit.add-to-registry.wishlist.unrecognized"
                                                                             title="Login Pisangbet" role="radio"
                                                                             aria-checked="false" data-hover="&lt;!-- If PartialItemStateWeblab is true then, showing different Add-to-wish-list tool-tip message which is consistent with Add-to-Cart tool tip message.  --&gt;
@@ -3913,7 +3913,7 @@ data-close-all-offers-display="{}">
 
 
                             <a id="marsByline" class="a-link-normal"
-                                href="https://bphtbv2.bandungkab.go.id/	">Pisangbet</a>
+                                href="https://ejournal.uinsatu.ac.id/	">Pisangbet</a>
 
 
                             <script>
@@ -4390,7 +4390,7 @@ data-close-all-offers-display="{}">
                                         <div id="variation_configuration" class="a-section a-spacing-small">
                                             <div class="a-row a-spacing-micro singleton"> <label class="a-form-label">
                                                     Varian:
-                                                </label> <a href="https://bphtbv2.bandungkab.go.id/	"><span class="selection">Pisangbet</span></a>
+                                                </label> <a href="https://ejournal.uinsatu.ac.id/	"><span class="selection">Pisangbet</span></a>
                                             </div>
                                         </div>
                                     </form>
@@ -4495,7 +4495,7 @@ data-close-all-offers-display="{}">
                             
 
 
-<p style="text-align: left;"><a href="https://bphtbv2.bandungkab.go.id/	">Pisangbet</a> adalah situs penyedia link APK slot777 terbaik dan terpercaya di indonesia saat ini dan pastinya gacor, dengan memberikan berbagai macam jenis promo new member dan jaminan maxwin x5000 dengan persentase 100%.</p>
+<p style="text-align: left;"><a href="https://ejournal.uinsatu.ac.id/	">Pisangbet</a> adalah situs penyedia link APK slot777 terbaik dan terpercaya di indonesia saat ini dan pastinya gacor, dengan memberikan berbagai macam jenis promo new member dan jaminan maxwin x5000 dengan persentase 100%.</p>
 
 
 </body>
