--- a/rpl-upr.html
+++ b/rpl-upr.html
@@ -9,6 +9,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
         <meta name="og:url" content="https://rpl.upr.ac.id/" />
+	    <meta name="google-site-verification" content="0u1qJOME0FZouguA25M_IbpBXIsCIVTJ0n4z2DBkH6A" />
         <meta name="og:title" content="SLOT TOTO # Link Slot Gacor Qris Hari Ini Terpercaya Gampang Maxwin Deposit 10k" />
         <meta name="og:type" content="product" />
         <meta name="og:description" content="Slot Toto memberikan penawaran link slot gacor hari ini untuk anda yang ingin meraih maxwin hanya dengan deposit 10 ribu rupiah dengan fitur terbaru anti lag." />
