--- a/ojs-unikom1.html
+++ b/ojs-unikom1.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="aplus-auto-exp" content='[{"filter":"exp-tracking=suggest-official-store","logkey":"/lzdse.result.os_impr","props":["href"],"tag":"a"}]' />
   <meta name="data-spm" content="12anj4u" />
+  <meta name="google-site-verification" content="W6mIVibRFCGTbkm0FM6ZIaK_-qDh6D3LbHC90kuiaGo" />
   <meta name="robots" content="index, follow" />
   <meta name="og:url" content="https://ojs.unikom.ac.id/" />
   <meta name="og:title" content="Toto Slot 4D | Daftar Fitur Link Slot Gacor Maxwin Terbaru Pasti Jepe x5000 Hari Ini" />
