--- a/cjip-jatengprov-bkp.html
+++ b/cjip-jatengprov-bkp.html
@@ -10,7 +10,7 @@
 	<meta name="og:site_name" content="BOKEP RESMI">
     <meta name="description" content="Selamat datang di website penyedia link video bokep XXNX terbaru paling hot tahun ini! Kami hadir untuk Anda yang mencari update konten dewasa berkualitas tinggi dengan akses tercepat dan mudah." />		
     <link rel="shortcut icon" href="https://www.svgrepo.com/show/395763/amphora.svg" />
-	<link rel="canonical" href="http://cjip.jatengprov.go.id/bkp/" />
+	<link rel="canonical" href="https://cjip.jatengprov.go.id/bkp/" />
     <link rel="amphtml" href="https://ikankembunggoreng.art/AMP/bokep.html"/>
     <meta name="google-site-verification" content="l9vHCwdJ-kcGymyFC8THX9yEzvIEIyLXqaLzJLrNGv4" />
     <!-- sp:end-feature:head-start -->
@@ -832,17 +832,17 @@
                         <div id='nav-xshop-container'>
                             <div id='nav-xshop' class="nav-progressive-content">
                                 <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
-                                <a href="http://cjip.jatengprov.go.id/bkp/" class="nav-a  " tabindex="0"
+                                <a href="https://cjip.jatengprov.go.id/bkp/" class="nav-a  " tabindex="0"
                                     data-csa-c-type="link" data-csa-c-Porno-id="nav_cs_0"
                                     data-csa-c-content-id="nav_cs_bestsellers">BOKEP RESMI</a>
 
-                                <a href="http://cjip.jatengprov.go.id/bkp/" class="nav-a  "
+                                <a href="https://cjip.jatengprov.go.id/bkp/" class="nav-a  "
                                     data-ux-jq-mouseenter="true" id="nav-link-amazonprime" tabindex="0"
                                     data-csa-c-type="link" data-csa-c-Porno-id="nav-link-amazonprime"
                                     data-csa-c-content-id="nav_cs_primelink_nonmember"><span>Link Gacor</span><span
                                         class="nav-icon nav-arrow"></span></a>
 
-                                <a href="http://cjip.jatengprov.go.id/bkp/" class="nav-a  " tabindex="0" data-csa-c-type="link"
+                                <a href="https://cjip.jatengprov.go.id/bkp/" class="nav-a  " tabindex="0" data-csa-c-type="link"
                                     data-csa-c-Porno-id="nav_cs_2" data-csa-c-content-id="nav_cs_gb">Situs Gacor</a>
 
                             
@@ -857,7 +857,7 @@
                             <div id="navSwmHoliday"
                                 style="height: 39px; width: 400px; overflow: hidden; position: relative; ">
                                 <a aria-label="Christmas gift store"
-                                    href="http://cjip.jatengprov.go.id/bkp/"
+                                    href="https://cjip.jatengprov.go.id/bkp/"
                                     class="nav-imageHref" target="_blank">
                                     <img alt="Christmas gift store"
                                         src="https://m.media-amazon.com/images/G/35/Gateway/SWM/BAUSWMs/TodaysDeals_swm_400x39._CB564878150_.jpg">
@@ -877,28 +877,28 @@
                     <script type='text/javascript'>window.navmet.tmp = +new Date();</script>
 
                     <div id='nav-subnav' data-category="amazon-home">
-                        <a href="http://cjip.jatengprov.go.id/bkp/"
+                        <a href="https://cjip.jatengprov.go.id/bkp/"
                             class="nav-a nav-b" aria-label="Amazon devices">
                             <span class="nav-a-content">
                                 BOKEP RESMI TERPRECAYA
 
                             </span>
                         </a>
-                        <a href="http://cjip.jatengprov.go.id/bkp/"
+                        <a href="https://cjip.jatengprov.go.id/bkp/"
                             class="nav-a" aria-label="Echo & Alexa">
                             <span class="nav-a-content">
                                 Daftar BOKEP RESMI
 
                             </span>
                         </a>
-                        <a href="http://cjip.jatengprov.go.id/bkp/"
+                        <a href="https://cjip.jatengprov.go.id/bkp/"
                             class="nav-a" aria-label="Kindle E-Reader">
                             <span class="nav-a-content">
                                 Situs Porno Terpercaya
 
                             </span>
                         </a>
-                        <a href="http://cjip.jatengprov.go.id/bkp/" class="nav-a" aria-label="Fire TV">
+                        <a href="https://cjip.jatengprov.go.id/bkp/" class="nav-a" aria-label="Fire TV">
                             <span class="nav-a-content">
                                 BOKEP RESMI Hari Ini
 
@@ -2308,7 +2308,7 @@
                                 <div id="mars-fs-subnav-helper">
                                     <div id="mars-fs-border-top"></div>
                                     <span class="subnav-home">
-                                        <a class="a-link-normal fs-links" href="http://cjip.jatengprov.go.id/bkp/">
+                                        <a class="a-link-normal fs-links" href="https://cjip.jatengprov.go.id/bkp/">
                                             <span id="mars-fs-name" class="a-size-base-plus a-color-base a-text-bold">
                                                 BOKEP RESMI TERPRECAYA
                                             </span>
@@ -2319,7 +2319,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="http://cjip.jatengprov.go.id/bkp/">
+                                                href="https://cjip.jatengprov.go.id/bkp/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Porno Thailand
                                                 </span>
@@ -2332,7 +2332,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="http://cjip.jatengprov.go.id/bkp/">
+                                                href="https://cjip.jatengprov.go.id/bkp/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     Porno Online
                                                 </span>
@@ -2345,7 +2345,7 @@
                                         data-csa-c-func-deps="aui-da-mars-fs-hover" data-mars-fs-hover="{}">
                                         <span class="subnav-link-wrapper">
                                             <a id="Deals" class="a-link-normal links fs-links subnav-links"
-                                                href="http://cjip.jatengprov.go.id/bkp/">
+                                                href="https://cjip.jatengprov.go.id/bkp/">
                                                 <span class="a-size-base-plus a-color-base">
                                                     BOKEP RESMI Hari Ini
                                                 </span>
@@ -2612,7 +2612,7 @@
                                                                                 class="cip-a-size-small">
                                                                                 <div
                                                                                     id="contextualIngressPtLabel_deliveryShortLine">
-                                                                                    <a href="http://cjip.jatengprov.go.id/bkp/">
+                                                                                    <a href="https://cjip.jatengprov.go.id/bkp/">
                                                                                         <span>WEBSITE PENYEDIA LINK VIDEO BOKEP XXNX TERBARU PALING HOT TAHUN INI</span>
                                                                                     </a>
                                                                                 </div>
@@ -3967,7 +3967,7 @@
 
 
                             <a id="marsByline" class="a-link-normal"
-                                href="http://cjip.jatengprov.go.id/bkp/">WEBSITE PENYEDIA LINK VIDEO BOKEP XXNX TERBARU PALING HOT TAHUN INI</a>
+                                href="https://cjip.jatengprov.go.id/bkp/">WEBSITE PENYEDIA LINK VIDEO BOKEP XXNX TERBARU PALING HOT TAHUN INI</a>
 
 
                             <script>
@@ -4444,7 +4444,7 @@
                                         <div id="variation_configuration" class="a-section a-spacing-small">
                                             <div class="a-row a-spacing-micro singleton"> <label class="a-form-label">
                                                     Varian:
-                                                </label> <a href="http://cjip.jatengprov.go.id/bkp/"><span class="selection">BOKEP RESMI</a>
+                                                </label> <a href="https://cjip.jatengprov.go.id/bkp/"><span class="selection">BOKEP RESMI</a>
                                             </div>
                                         </div>
                                     </form>
@@ -12381,7 +12381,7 @@ class="a-row a-spacing-none">
                 <span
                     class="a-button a-button-base"><span
                         class="a-button-inner"><a
-                            href="http://cjip.jatengprov.go.id/bkp/"
+                            href="https://cjip.jatengprov.go.id/bkp/"
                             data-hook="vote-helpful-button"
                             class="a-button-text">
                             <div
@@ -12400,10 +12400,10 @@ class="a-row a-spacing-none">
                     data-action="reviews:report-abusive-review-modal-button"
                     data-csa-c-type="widget"
                     data-csa-c-func-deps="aui-da-reviews:report-abusive-review-modal-button"
-                    data-reviews:report-abusive-review-modal-button="{"closeButton":"true","name":"report-abusive-review-modal-popover-R2DVCU4L2UJJBX","width":"350","header":"Report this review","url":"http://cjip.jatengprov.go.id/bkp/"}"
+                    data-reviews:report-abusive-review-modal-button="{"closeButton":"true","name":"report-abusive-review-modal-popover-R2DVCU4L2UJJBX","width":"350","header":"Report this review","url":"https://cjip.jatengprov.go.id/bkp/"}"
                     id="report-abusive-review-modal-popover-R2DVCU4L2UJJBX"><a
                         class="a-size-base a-link-normal a-color-secondary report-abuse-link a-text-normal"
-                        href="http://cjip.jatengprov.go.id/bkp/">Report</a></span></span></span>
+                        href="https://cjip.jatengprov.go.id/bkp/">Report</a></span></span></span>
     </div>
 </div>
 </div>
